Jun 18th notes - Pfenning

--- a/Pfenning/17-jun-morning.tex
+++ b/Pfenning/17-jun-morning.tex
@@ -52,7 +52,6 @@
 
 \title{Session-Typed Concurrent Programming \\ Frank Pfenning \\ OPLSS 2019} % Title
 
-\author{John \textsc{Smith}} % Author name
 
 
 
@@ -65,8 +64,7 @@
 Date Performed: & June 17th 2019 \\ % Date the experiment was performed
 Students: & J.W.N. Paulus  \\
 & R. Gurdeep Singh \\ % Partner names
-& H. C. A. Tavante \\
-Instructor: & Professor Smith % Instructor/supervisor
+& H. C. A. Tavante % Instructor/supervisor
 \end{tabular}
 \end{center}
 
