--- a/Myers/lecture4.tex
+++ b/Myers/lecture4.tex
@@ -5,6 +5,8 @@
 \usepackage{amsmath,amsthm,stmaryrd,amssymb,fdsymbol}
 \usepackage{bussproofs}
 \usepackage{listings}
+\usepackage{tikz}
+\usetikzlibrary{matrix,patterns}
 
 \newcommand{\la}{^{\leftarrow}}
 \newcommand{\ra}{^{\rightarrow}}
@@ -171,7 +173,58 @@ Use SecVerilog = Verilog + security labels
 \emph{Soundness:} at each clock tick, no H information leaks to a L variable.
   
 See slides for the rest.
+\begin{figure}[ht!]
+\begin{tikzpicture}
 
+\node[below] at (1,0) (Hla) {$\quad H\la$};
+\node[above] at (1,2) (Hra) {$\quad H\ra$};
+\node[left] at (0,1) (L) {$L$};
+\node[right] at (2,1) (H) {$H$};
+
+\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
+
+\draw[thick,->] (-0.2,1.2) -- (0.8,2.2) node[midway,above] {$C$};
+\draw[thick,->] (-0.2,0.8) -- (0.8,-0.2) node[midway,below] {$I$};
+\end{tikzpicture}
+\label{fig1}
+\end{figure}
+
+\begin{figure}[ht!]
+\begin{tikzpicture}
+
+\node[below] at (1,0) (Tla) {$\quad \top\la$};
+\node[above] at (1,2) (Tra) {$\quad \top\ra$};
+\node[left] at (0,1) (bot) {$\bot$};
+\node[right] at (2,1) (top) {$\top$};
+
+\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
+
+\draw[thick,->] (-0.2,1.2) -- (0.8,2.2) node[midway,above] {$L$};
+\draw[thick,->] (-0.2,0.8) -- (0.8,-0.2) node[midway,below] {$H$};
+
+\draw[thick,->] (0,-.75) -- (2,-.75) node[midway,below] {$\succeq$};
+\draw[thick,->] (2.75,0) -- (2.75,2) node[midway,right] {$\sqsubseteq$};
+
+\draw[dotted] (0.25,1) -- (1.75,1);
+\node[below] at (0.5,1) (L1) {$L$};
+\fill (L1.north) circle [radius=1.5pt];
+\node[below] at (1.5,1) (H1) {$H$};
+\fill (H1.north) circle [radius=1.5pt];
+\end{tikzpicture}
+\label{fig3}
+\end{figure}
+
+\begin{figure}[ht!]
+\begin{tikzpicture}
+
+\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
+\draw[thick,pattern=north east lines] (0,1) -- (2,1) -- (1,2) -- (0,1);
+
+\draw[thick,->] (2,2) node[above] {compromised labels} -- (1,1.3) ;
+
+\end{tikzpicture}
+\label{fig4}
+\end{figure}
 
 
 \end{document}
