edit transparent endorsement section

--- a/Myers/lecture4.tex
+++ b/Myers/lecture4.tex
@@ -7,6 +7,9 @@
 \usepackage{listings}
 \usepackage{tikz}
 
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{definition}{Definition}[theorem]
+
 \newcommand{\la}{^{\leftarrow}}
 \newcommand{\ra}{^{\rightarrow}}
 \newcommand{\refl}{\hourglass}
@@ -17,35 +20,36 @@
 
 \maketitle
 
-NI $\rightarrow$ Robust declassification (NI refines RD)
+\section{Transparent Endorsement}
 
-Robust declassification breaks the confidentiality/integrity duality
+From last time: NI $\rightarrow$ Robust declassification (NI refines RD). Robust declassification breaks the confidentiality/integrity duality.
 
-Can be restored with dual: Transparent Endorsement (TE).
+To restore duality define
+Transparent Endorsement (TE).
 % figure 1 here
 Example: password checker
 \begin{lstlisting}[mathescape,frame=single,basicstyle=\ttfamily,language=java]
 String{H} pwd;
  bool{H$^{\leftarrow}$} check_password(String{H$^{\rightarrow}$} guess) {
-    String{H} endorsed_guess = endorse(guess,$\rightarrow$ to H);
+    String{H} endorsed_guess = endorse(guess,H$^\rightarrow$ to H);
     bool{H} res = (password == endorsed_guess);
-    return declassify(res,H to H${\leftarrow}$);
+    return declassify(res,H to H$^{\leftarrow}$);
 }
 \end{lstlisting}
-Problem can arise when adversary manages to steer password value directly into \texttt{check\_password} function. (abusing downgrading); problem arises as password with H label can flow into H$^{\rightarrow}$. 
+A problem can arise when adversary manages to steer password value directly into \texttt{check\_password} function, abusing downgrading. The problem arises because \texttt{pwd} with H label (trusted) can flow into H$^{\rightarrow}$ (untrusted). To solve the problem we can give label L to variable $\texttt{guess}$ (untrusted and unconfidential).
 
-To solve,
+This is enforced by the typing  rule for \emph{transparent endorsement}:
 
-Rule for transparent endorsement:
 \begin{prooftree}
     \AxiomC{$\Gamma(y) \sqsubseteq l_1$}
     \AxiomC{$ l_2 \sqsubseteq\Gamma(y) $}
     \AxiomC{$ l_1 \sqsubseteq l_2 \sqcup \bigtriangledown (l_1 \sqcup pc) $}
-    \TrinaryInfC{$pc \vdash x := \text{endorse}(y,l_1 to l_2)$}    
+    \TrinaryInfC{$pc \vdash x := \text{endorse}(y,l_1 $ to $l_2)$}    
 \end{prooftree}
 
-$\bigtriangledown$ (voice) maps confidentiality to corresponding integrity
+$\bigtriangledown$ = voice = maps confidentiality to corresponding integrity
 
+We can describe both robust declassification and transparent endorsement in the same picture:
 
 \begin{tikzpicture}
   \node (n1) {$s_{11}$};
@@ -59,32 +63,46 @@ $\bigtriangledown$ (voice) maps confidentiality to corresponding integrity
 \end{tikzpicture}
 
 % figure 2 here
-RD: $\llbracket S_{11} \rrbracket \approx_L \llbracket S_{21} \rrbracket \Rightarrow \llbracket S_{12} \rrbracket \approx_L \llbracket S_{22} \rrbracket $
 
-TE: $S_{11} \approx_H S_{12} \Rightarrow S_{21} \approx_H S_{22} $
+\begin{definition}[Robust declassification]  
+\begin{equation*}
+  \llbracket s_{11} \rrbracket \approx_L \llbracket s_{21} \rrbracket \ \land \text{ relevant inputs} \Rightarrow \llbracket s_{12} \rrbracket \approx_L \llbracket s_{22} \rrbracket 
+\end{equation*}
+\end{definition}
+
+
+\begin{definition}[Transparent endorsement]
+\begin{equation*}
+  \llbracket s_{11} \rrbracket \approx_H \llbracket s_{12} \rrbracket \ \land \text{ relevant inputs} \Rightarrow \llbracket s_{21} \rrbracket \approx_H \llbracket s_{22} \rrbracket
+\end{equation*}  
+\end{definition}  
 
 RD + TE ="nonmalleable informationi flow"
 
-Where do $\bigtriangleup$ and $\bigtriangledown$ come from?
+\paragraph{Where do $\bigtriangleup$ and $\bigtriangledown$ come from?}\ 
 
 FLAM (Arden et al. CSF'15)
-
 \begin{enumerate}
     \item labels are principals
     \item primitive principals (Alice, Bob, p, q, $\ldots$)
-    \item prinicpal projections ($p^{\leftarrow}$, integrity projection), $p^{\rightarrow}$, confidentiality)
-    \item joins and meets on principals $p \land q$ (reads as: powers of both $p$ and $q$), $p \wedge q$. $\forall p,q. p \land q \succeq p \wedge q$. (trust ordering). Least powerful principal is $\bot$; most powerful is $\top$. %see figure 3
+    \item prinicpal projections ($p^{\leftarrow}$ integrity projection, $p^{\rightarrow}$ confidentiality)
+    \item joins and meets on principals $p \land q$ (reads as: powers of both $p$ and $q$), $p \lor q$.
+      \begin{equation*}
+        \forall p,q. p \land q \succeq p \succeq p \lor q
+      \end{equation*}
+where $\succeq$ is a trust ordering. Least powerful principal is $\bot$; most powerful is $\top$. %see figure 3
 \end{enumerate}
 
-Normal form for principals: $A^{\leftarrow} \land B^{\rightarrow}$.
-$A,B$ are CNF expressions over primitive principals.
+A normal form for principals is $A^{\leftarrow} \land B^{\rightarrow}$, where $A,B$ are CNF expressions over primitive principals. Then $\bigtriangleup$ and $\bigtriangledown$ are defined as:
 
-$\bigtriangleup (A \la \land B \ra) = A \ra \land T \la$
-$\bigtriangledown (A \la \land B \ra) = B \la$
+\begin{align*}
+  \bigtriangleup (A \la \land B \ra) &= A \ra \land T \la \\
+  \bigtriangledown (A \la \land B \ra) &= B \la \\
+  \text{Reflection:} \refl (A \la \land B \ra) &= B \la \land A \ra                                         
+\end{align*}
 
-Reflection: $ \refl (A \la \land B \ra) = B \la \land A \ra$
 
-if $l \not\sqsubseteq \refl l$, can't downgrade nonmalleably
+If something has label $l \not\sqsubseteq \refl l$, we can't downgrade it nonmalleably.
 %figure 4 here
 
 \section{Hardware security}
