change package for hourglass

--- a/Myers/lecture4.tex
+++ b/Myers/lecture4.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[hyphens]{url} 
 \usepackage[breaklinks]{hyperref}
-\usepackage{amsmath,amsthm,stmaryrd,amssymb,fdsymbol}
+\usepackage{amsmath,amsthm,stmaryrd,amssymb,stix}
 \usepackage{bussproofs}
 \usepackage{listings}
 \usepackage{tikz}
