Moved pictures into position, added labels

--- a/Myers/lecture4.tex
+++ b/Myers/lecture4.tex
@@ -25,10 +25,26 @@
 
 From last time: NI $\rightarrow$ Robust declassification (NI refines RD). Robust declassification breaks the confidentiality/integrity duality.
 
-To restore duality define
-Transparent Endorsement (TE).
-% figure 1 here
-Example: password checker
+To restore duality  we define
+Transparent Endorsement (TE). For an example, see the code fragment in figure~\ref{code1}
+\begin{figure}[ht!]
+\begin{tikzpicture}
+
+\node[below] at (1,0) (Hla) {$\quad H\la$};
+\node[above] at (1,2) (Hra) {$\quad H\ra$};
+\node[left] at (0,1) (L) {$L$};
+\node[right] at (2,1) (H) {$H$};
+
+\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
+
+\draw[thick,->] (-0.2,1.2) -- (0.8,2.2) node[midway,above] {$C$};
+\draw[thick,->] (-0.2,0.8) -- (0.8,-0.2) node[midway,below] {$I$};
+\end{tikzpicture}
+\label{fig1}
+\caption{Lattice for TE}
+\end{figure}
+
+\begin{figure}
 \begin{lstlisting}[mathescape,frame=single,basicstyle=\ttfamily,language=java]
 String{H} pwd;
  bool{H$^{\leftarrow}$} check_password(String{H$^{\rightarrow}$} guess) {
@@ -37,6 +53,10 @@ String{H} pwd;
     return declassify(res,H to H$^{\leftarrow}$);
 }
 \end{lstlisting}
+\label{code1}
+\caption{Example: password checker}
+\end{figure}
+
 A problem can arise when adversary manages to steer password value directly into \texttt{check\_password} function, abusing downgrading. The problem arises because \texttt{pwd} with H label (trusted) can flow into H$^{\rightarrow}$ (untrusted). To solve the problem we can give label L to variable $\texttt{guess}$ (untrusted and unconfidential).
 
 This is enforced by the typing  rule for \emph{transparent endorsement}:
@@ -91,7 +111,32 @@ FLAM (Arden et al. CSF'15)
       \begin{equation*}
         \forall p,q. p \land q \succeq p \succeq p \lor q
       \end{equation*}
-where $\succeq$ is a trust ordering. Least powerful principal is $\bot$; most powerful is $\top$. %see figure 3
+where $\succeq$ is a trust ordering. Least powerful principal is $\bot$; most powerful is $\top$. See figure~\ref{fig3}
+\begin{figure}[ht!]
+\begin{tikzpicture}
+
+\node[below] at (1,0) (Tla) {$\quad \top\la$};
+\node[above] at (1,2) (Tra) {$\quad \top\ra$};
+\node[left] at (0,1) (bot) {$\bot$};
+\node[right] at (2,1) (top) {$\top$};
+
+\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
+
+\draw[thick,->] (-0.2,1.2) -- (0.8,2.2) node[midway,above] {$L$};
+\draw[thick,->] (-0.2,0.8) -- (0.8,-0.2) node[midway,below] {$H$};
+
+\draw[thick,->] (0,-.75) -- (2,-.75) node[midway,below] {$\succeq$};
+\draw[thick,->] (2.75,0) -- (2.75,2) node[midway,right] {$\sqsubseteq$};
+
+\draw[dotted] (0.25,1) -- (1.75,1);
+\node[below] at (0.5,1) (L1) {$L$};
+\fill (L1.north) circle [radius=1.5pt];
+\node[below] at (1.5,1) (H1) {$H$};
+\fill (H1.north) circle [radius=1.5pt];
+\end{tikzpicture}
+\label{fig3}
+\caption{Lattice for FLAM}
+\end{figure}
 \end{enumerate}
 
 A normal form for principals is $A^{\leftarrow} \land B^{\rightarrow}$, where $A,B$ are CNF expressions over primitive principals. Then $\bigtriangleup$ and $\bigtriangledown$ are defined as:
@@ -103,8 +148,21 @@ A normal form for principals is $A^{\leftarrow} \land B^{\rightarrow}$, where $A
 \end{align*}
 
 
-If something has label $l \not\sqsubseteq \refl l$, we can't downgrade it nonmalleably.
-%figure 4 here
+If something has label $l \not\sqsubseteq \refl l$, we can't downgrade it nonmalleably. See figure~\ref{fig4}.
+
+
+\begin{figure}[ht!]
+\begin{tikzpicture}
+
+\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
+\draw[thick,pattern=north east lines] (0,1) -- (2,1) -- (1,2) -- (0,1);
+
+\draw[thick,->] (2,2) node[above] {compromised labels} -- (1,1.3) ;
+
+\end{tikzpicture}
+\label{fig4}
+\caption{Reflection drawn in lattice}
+\end{figure}
 
 \section{Hardware security}
 Modern systems:
@@ -203,59 +261,10 @@ Use SecVerilog = Verilog + security labels
 
 \emph{Soundness:} at each clock tick, no H information leaks to a L variable.
   
-See slides for the rest.
-\begin{figure}[ht!]
-\begin{tikzpicture}
+See slides for the rest. 
 
-\node[below] at (1,0) (Hla) {$\quad H\la$};
-\node[above] at (1,2) (Hra) {$\quad H\ra$};
-\node[left] at (0,1) (L) {$L$};
-\node[right] at (2,1) (H) {$H$};
 
-\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
 
-\draw[thick,->] (-0.2,1.2) -- (0.8,2.2) node[midway,above] {$C$};
-\draw[thick,->] (-0.2,0.8) -- (0.8,-0.2) node[midway,below] {$I$};
-\end{tikzpicture}
-\label{fig1}
-\end{figure}
-
-\begin{figure}[ht!]
-\begin{tikzpicture}
-
-\node[below] at (1,0) (Tla) {$\quad \top\la$};
-\node[above] at (1,2) (Tra) {$\quad \top\ra$};
-\node[left] at (0,1) (bot) {$\bot$};
-\node[right] at (2,1) (top) {$\top$};
-
-\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
-
-\draw[thick,->] (-0.2,1.2) -- (0.8,2.2) node[midway,above] {$L$};
-\draw[thick,->] (-0.2,0.8) -- (0.8,-0.2) node[midway,below] {$H$};
-
-\draw[thick,->] (0,-.75) -- (2,-.75) node[midway,below] {$\succeq$};
-\draw[thick,->] (2.75,0) -- (2.75,2) node[midway,right] {$\sqsubseteq$};
-
-\draw[dotted] (0.25,1) -- (1.75,1);
-\node[below] at (0.5,1) (L1) {$L$};
-\fill (L1.north) circle [radius=1.5pt];
-\node[below] at (1.5,1) (H1) {$H$};
-\fill (H1.north) circle [radius=1.5pt];
-\end{tikzpicture}
-\label{fig3}
-\end{figure}
-
-\begin{figure}[ht!]
-\begin{tikzpicture}
-
-\draw[thick]  (1,0) -- (2,1) -- (1,2) -- (0,1) --  (1,0);
-\draw[thick,pattern=north east lines] (0,1) -- (2,1) -- (1,2) -- (0,1);
-
-\draw[thick,->] (2,2) node[above] {compromised labels} -- (1,1.3) ;
-
-\end{tikzpicture}
-\label{fig4}
-\end{figure}
 
 
 \end{document}
