--- a/Hoffmann/lecture4.tex
+++ b/Hoffmann/lecture4.tex
@@ -56,13 +56,13 @@ We want to find a derivation for:
     \ matL(x;\ nil;\ y,ys.cons(y;\ tick\{2\} (id (ys)))\big) : L^2(unit) \rightarrow^{0/0} L^0(unit)\]
 \end{example}
   
-See figure~\ref{fig:type-inference-example} for the deriviation tree.
+See figure~\ref{fig:type-inference-example} for the deriviation tree, where $e_{id} = fix\big(id .\ \lambda(x : L(unit)) \ matL(x;\ nil;\ y,ys.cons(y;\ tick\{2\} (id (ys)))\big) $ and $\tau_{id} = L^2(unit) \rightarrow^{0/0} L^0(unit)$.
 
 
 \begin{sidewaysfigure}[ht]
 \begin{prooftree}
 \def\defaultHypSeperation{.3em}
-\AxiomC{$x : L^2(1) \ldash{0}{0} z : L^2(1)$}
+\AxiomC{$x : L^2(1) \ldash{0}{0} x : L^2(1)$}
 \AxiomC{$id : \tau_{id} \ldash{0}{0} nil : L^0(1)$}
 %
 \AxiomC{}
@@ -71,17 +71,18 @@ See figure~\ref{fig:type-inference-example} for the deriviation tree.
 
 \AxiomC{}
 \LeftLabel{app}
-\UnaryInfC{$id : \tau_{id},ys : L^2(1) \ldash{0}{0} id (us) : L^0(1)$}
-\UnaryInfC{$id : \tau_{id}, yss :L^2(1) \ldash{2}{0} tick \{2\} (id (ys)) :  L^0(1)$}
+\UnaryInfC{$id : \tau_{id},ys : L^2(1) \ldash{0}{0} id (ys) : L^0(1)$}
+\UnaryInfC{$id : \tau_{id}, ys :L^2(1) \ldash{2}{0} tick \{2\} (id (ys)) :  L^0(1)$}
 
-\BinaryInfC{$id : \tau_{id}, y : 1, ys: : L^2(1) \ldash{2}{0} cons(y,tick \{2\} id(ys)) : L^0(1)$}
+\BinaryInfC{$id : \tau_{id}, y : 1, ys: : L^2(1) \ldash{2}{0} cons(y,tick \{2\} (id(ys)) : L^0(1)$}
 %
 \TrinaryInfC{$id : \tau_{id}, x : L^2(1) \ldash{}{} e_{id} : L^0(1)$}
 \UnaryInfC{$id : \tau_{id} \ldash{0}{0} \lambda(x) e_{id} : \tau_{id}$}
 \UnaryInfC{$\ldash{0}{0} fix(id \lambda(x) e_{id} : \tau_{id}$}
 \end{prooftree}
-\label{fig:type-inference-example}
 \caption{Example of type inference}
+\label{fig:type-inference-example}
+
 \end{sidewaysfigure}
 
 
@@ -98,11 +99,37 @@ For type inference we need algorithmic (or syntax-directed) rules.
 Algorithm for type inference:
 \begin{enumerate}
 \item Infer usual tpyes (without annotations), which results in a type derication (like example in figure~\ref{fig:type-inference-example} with all annotations removed);
-\item Add potential variables where a potential annotation is required;
+\item Add potential variables where a potential annotation is required. See figure~\ref{fig:type-inference-example-vars}. Note the this step is only partially done in the figure;
 \item Derive from the typing rules linear constraints on potential variables;
 \item Solve constraints with LP solver;
 \item Objective is the sum of initial potential annotations.
 \end{enumerate}
+
+\begin{sidewaysfigure}[ht]
+\begin{prooftree}
+\def\defaultHypSeperation{.3em}
+\AxiomC{$x : L^{p_2}(1) \ldash{r_3}{r'_3} x : L^{p'_2}(1)$}
+\AxiomC{$id : \tau_{id} \ldash{}{} nil : L(1)$}
+%
+\AxiomC{}
+\LeftLabel{relax}
+\UnaryInfC{$y : 1 \ldash{}{} y : 1$}
+
+\AxiomC{}
+\LeftLabel{app}
+\UnaryInfC{$id : \tau_{id},ys : L(1) \ldash{s_2}{s'_2} id (ys) : L(1)$}
+\UnaryInfC{$id : \tau_{id}, ys :L(1) \ldash{s_1}{s'_1} tick \{2\} (id (ys)) :  L(1)$}
+
+\BinaryInfC{$id : \tau_{id}, y : 1, ys: : L^2(1) \ldash{r_4}{r'_4} cons(y,tick \{2\} (id(ys)) : L(1)$}
+%
+\TrinaryInfC{$id : \tau_{id}, x : L^{p_1}(1) \ldash{r_3}{r'_3} e_{id} : L^{p'_1}(1)$}
+\UnaryInfC{$id : \tau_{id} \ldash{r_1}{r'_1} \lambda(x) e_{id} : \tau_{id}$}
+\UnaryInfC{$\ldash{r_0}{r'_0} fix(id \lambda(x) e_{id} : \tau_{id}$}
+\end{prooftree}
+\caption{Type inference, step 2 of the algorithm}
+\label{fig:type-inference-example-vars}
+\end{sidewaysfigure}
+
 
 \section{Implementation in RAML and examples}
 Live RAML (Resource aware ML) demo showing binary counter, using the source code displayed in figure~\ref{code:binary-counter}.
@@ -127,8 +154,8 @@ let rec in_many n =
     | Z -> []
     | S n'-> inc (inc_many n')
 \end{lstlisting}
-\label{code:binary-counter}
 \caption{Code for binary counter example}
+\label{code:binary-counter}
 \end{figure}
 Second example with queue.
 \end{document}
