--- a/Hoffmann/cmds.tex
+++ b/Hoffmann/cmds.tex
@@ -13,6 +13,12 @@
 \newcommand{\triv}{\mathrm{triv}}
 \newcommand{\trivc}{\langle\rangle}
 
+\newcommand{\fixp}[3]{\mathrm{fix}\left(#1:#2\right).~#3}
+\newcommand{\fixpc}[3]{\mathrm{fix}\{#2\}\left(#1.#3\right)}
+
+\newcommand{\tick}[2]{\mathrm{tick}~#1~\mathrm{in}~#2}
+\newcommand{\tickc}[2]{\mathrm{tick}\{#1\}\left(#2\right)}
+
 \newcommand{\isval}[1]{#1\,\mathrm{val}}
 
 \newcommand{\costof}[2]{#1\left(\mathrm{#2}\right)}
@@ -20,3 +26,12 @@
 \newcommand{\evalenv}[5]{#1 \vdash_{#2} #3 \Downarrow^{#4}#5}
 \newcommand{\evalwatermark}[6]{#1 {}_{#2}\!\vdash^{#3}_{#4} #5 \Downarrow #6 }
 \newcommand{\evalmono}[6]{#1 \vdash_{#2} #3 \Downarrow #4 \mid \left(#5,#6\right)}
+
+\newcommand{\sharingsymbol}{\dagger} % replace this by the correct symbol later
+\newcommand{\sharing}[3]{#1\dagger#2\mid#3}
+
+\newcommand{\typ}[5]{#1\vdash^{#2}_{#3} #4:#5}
+\newcommand{\matchc}[5]{\mathrm{matL}\left(#1,#2,#3.#4.#5\right)}
+
+\newcommand{\share}[4]{\mathrm{share}~#1~\mathrm{as}~#2,#3~\mathrm{in}~#4}
+% Maybe: mathrm --> mathtt?
