intro in Andrew Myers lecture 4

--- a/Myers/lecture4.tex
+++ b/Myers/lecture4.tex
@@ -16,10 +16,13 @@
 \newcommand{\refl}{\hourglass}
 
 \title{Security-Typed Languages \\ \Large{Lecture 4}} 
+\author{Renate Robin Eilers  \and Cristina \and Baber Rehman}
 
 \begin{document}
 
 \maketitle
+
+This is the fourth talk presented by Andrew Myers in OPLSS 2019.
 
 \section{Transparent Endorsement}
 
@@ -193,6 +196,8 @@ $\mu$ architecture \\
 \end{itemize}
 
 \subsection{Example}
+
+\pagebreak
 
 \begin{lstlisting}[mathescape,frame=single,basicstyle=\ttfamily,language=java,caption={Timing to update $l_3$ depends on the value of $h_1$.},captionpos=b]
 if $h_1$ then
